--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@babel/node": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "express": "^4.18.1",
-    "mongodb": "^4.8.1",
-    "uuid": "^8.3.2"
+    "mongodb": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
